[workspace]
members = [
    "reishi-handshake",
    "reishi-quinn",
]
resolver = "3"

[workspace.package]
version = "0.1.1"
authors = ["Jakub Kubík <jakub.kubik.it@protonmail.com>"]
edition = "2024"
license = "MIT"
rust-version = "1.85"
homepage = "https://github.com/quincy-rs/reishi"
repository = "https://github.com/quincy-rs/reishi"
keywords = ["noise", "handshake", "cryptography", "quinn", "quic"]
categories = ["cryptography", "network-programming"]

[workspace.dependencies]
# Internal crates
reishi-handshake = { path = "reishi-handshake", version = "0.1.1" }

# Cryptography
blake2 = { version = "0.10", default-features = false }
chacha20 = "0.9"
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
x25519-dalek = { version = "2", default-features = false, features = ["static_secrets", "zeroize"] }
ml-kem = { version = "0.3.0-rc.0", default-features = false, features = ["zeroize"] }
subtle = { version = "2", default-features = false }
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
zeroize = { version = "1", default-features = false, features = ["zeroize_derive", "alloc"] }

# Quinn
quinn-proto = { version = "0.11", default-features = false }

# Utils
bytes = "1"
