[package]
name = "reishi-handshake"
description = "Pure, sans-IO implementation of the Noise IK handshake with optional post-quantum hybrid mode"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
pq = ["ml-kem"]

[dependencies]
blake2 = { workspace = true }
chacha20poly1305 = { workspace = true }
rand_core = { workspace = true }
subtle = { workspace = true }
x25519-dalek = { workspace = true }
zeroize = { workspace = true }
ml-kem = { workspace = true, optional = true }

[dev-dependencies]
snow = "0.10"
rand = "0.8"
hex = "0.4"
